// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button button with value should render button 1`] = `
<Button
  value="add"
>
  <input
    className="Binary Binary-add span-1"
    key="add"
    onClick={[Function]}
    type="button"
    value="+"
  />
</Button>
`;

exports[`Button button with value when prop 'initial' changes value should be the same if a nonInitialLabel is not provided 1`] = `
<input
  className="Reset Reset-reset span-1"
  key="reset"
  onClick={[Function]}
  type="button"
  value="AC"
/>
`;

exports[`Button button with value when prop 'initial' changes value should be the same if a nonInitialLabel is not provided 2`] = `
<input
  className="Reset Reset-reset span-1"
  key="reset"
  onClick={[Function]}
  type="button"
  value="AC"
/>
`;

exports[`Button button with value when prop 'initial' changes value should change if a nonInitialLabel is provided 1`] = `
<input
  className="Reset Reset-reset span-1"
  key="reset"
  onClick={[Function]}
  type="button"
  value="AC"
/>
`;

exports[`Button button with value when prop 'initial' changes value should change if a nonInitialLabel is provided 2`] = `
<input
  className="Reset Reset-reset span-1"
  key="reset"
  onClick={[Function]}
  type="button"
  value="C"
/>
`;

exports[`Button renders empty button 1`] = `
<input
  type="button"
/>
`;
